--- a/public/css/user.css
+++ b/public/css/user.css
@@ -6,14 +6,40 @@
     display: none;
 }
 
+
+
+
 .infoGrid {
     height: 50vh;
-    display: grid;
-    grid-template-columns: 6fr 3fr;
-    gap: 1em;
+
     width: 100%;
     margin: auto;
+    display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(3, 1fr);
+gap:0.2em;
 }
+
+#userInfo {
+   grid-area: 1 / 1 / 2 / 3;
+}
+
+#friends {
+     grid-area: 2/ 1 / 3 / 2; 
+}
+
+#chat {
+    grid-area: 2 / 2 / 3 / 3;;
+}
+
+#invites {
+   grid-area: 3 / 1 / 4 / 2;; 
+}
+
+#friendInvites {
+   grid-area: 3 / 2 / 4 / 3; ;
+}
+
 
 .container {
     padding: 0;
