--- a/views/user.hbs
+++ b/views/user.hbs
@@ -23,7 +23,7 @@
             <p id="infoFirstName"><b>First Name:</b> {{{user.firstname}}}</p>
             <p id="infoLastName"><b>Last Name:</b> {{{user.lastname}}}</p>
             <p id="infoEmail"><b>Email:</b> {{{user.email}}}</p>
-            <button type="button" id="editPersonalDetails" class="btn btn-outline-dark">Edit Personal
+            <button type="button" id="editPersonalDetails" class="btn btn-outline-primary">Edit Personal
                 Details</button>
             <div id="userForm" class="hide">
                 <div class="input-group mb-3">
