--- a/public/css/user.css
+++ b/public/css/user.css
@@ -62,6 +62,7 @@ gap:0.2em;
 
 .friend {
     margin: 0.3em;
+    
 }
 
 .friend p {
@@ -72,10 +73,12 @@ gap:0.2em;
 .friend span {
     transition: all 100ms ease-in-out;
     cursor: pointer;
+    color:white;
+    background:#235;
 }
 
 .friend span:hover {
-    background-color:#85FFFE;
+    background-color:#222;
 }
 .removeFriend{
     opacity: 0;
@@ -108,7 +111,7 @@ gap:0.2em;
 }
 
 .currentChat {
-    background: #63BFBF;
+    background: #233 !important;
 }
 
 .fromUser {
@@ -118,7 +121,7 @@ gap:0.2em;
 .message {
     width: 75% !important;
     margin: 5px auto;
-    background: #63BFBF;
+    background: #235;
     padding: 10px;
     font-weight: 600;
     color: #fff;
@@ -131,9 +134,9 @@ gap:0.2em;
     width: 0px;
     height: 0px;
     position: absolute;
-    border-left: 10px solid #63BFBF;
+    border-left: 10px solid #235;
     border-right: 10px solid transparent;
-    border-top: 10px solid #63BFBF;
+    border-top: 10px solid #235;
     border-bottom: 10px solid transparent;
     right: -20px;
     top: 6px;
@@ -145,8 +148,8 @@ gap:0.2em;
     height: 0px;
     position: absolute;
     border-left: 10px solid transparent;
-    border-right: 10px solid #63BFBF;
-    border-top: 10px solid #63BFBF;
+    border-right: 10px solid #235;
+    border-top: 10px solid #235;
     border-bottom: 10px solid transparent;
     left: -19px;
     top: 6px;
