Refactor + Fix webhook

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -73,13 +73,13 @@
     <div class="topButtons">
 
         <button type="button" data-toggle="modal" id="delProject" data-target="#removeProjectModal"
-            class="btn btn-danger">Delete Project</button>
+            class="btn adminBtn btn-danger">Delete Project</button>
         <button type="button" data-toggle="modal" data-target="#addUserModal" class="btn btn-primary deleteProject">Add
             User</button>
         <button type="button" data-toggle="modal" data-target="#showCalender" class="btn btn-primary deleteProject">Show
             Calender</button>
         <button type="button" data-toggle="modal" data-target="#webhookModal"
-            class="btn btn-primary deleteProject">Manage
+            class="btn adminBtn btn-primary deleteProject">Manage
             Webhooks</button>
     </div>
 
