Fixed weird bug

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -78,8 +78,8 @@
             User</button>
         <button type="button" data-toggle="modal" data-target="#showCalender" class="btn btn-primary deleteProject">Show
             Calender</button>
-        <button type="button" data-toggle="modal" data-target="#webhookModal"
-            class="btn btn-primary deleteProject">Manage
+        <button type="button" data-toggle="modal" data-target="#webhookModal" class="btn btn-primary deleteProject"
+            id="webhookBtn">Manage
             Webhooks</button>
     </div>
 
