--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
         Your browser does not support the video tag.
     </video>
     <h2 class="title">Try our easy to use tool</h2>
-
+    <div class="testbox"></div>
     <div class="information">
         <img src="./public/img/message.bmp" alt="Message" class="display">
         <p>Our tool makes it easy to collaborate on a single project, to work in teams, and have a more transparent
