--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,11 +4,11 @@
 
 body {
     overflow-x: hidden;
-    background:#333;
+    background: #333;
 }
 
 main {
-    color:white;
+    color: white;
     padding-top: 3em !important;
     padding-left: 4em !important;
 }
@@ -21,11 +21,13 @@ main {
     padding-left: 3em;
 }
 
+
 /* width */
 
 ::-webkit-scrollbar {
     width: 5px;
 }
+
 
 /* Track */
 
@@ -33,23 +35,27 @@ main {
     background: #222;
 }
 
+
 /* Handle */
 
 ::-webkit-scrollbar-thumb {
     background: #222;
 }
 
+
 /* Handle on hover */
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     height: 4px;
     width: 4px;
     background: rgba(0, 0, 0, 0.3);
 }
-::-webkit-scrollbar-thumb:horizontal{
+
+::-webkit-scrollbar-thumb:horizontal {
     background: #222;
     border-radius: 10px;
 }
@@ -165,7 +171,7 @@ ul {
 }
 
 #addProject {
-    color:#222;
+    color: #222;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,19 +191,18 @@ ul {
 }
 
 .project:hover {
-    width:100%;
-    border-radius:0;
+    width: 100%;
+    border-radius: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    
     border: 2px solid #235 !important;
     cursor: pointer;
 }
 
 .currentProject {
     border: 4px solid #235 !important;
-    width:100%;
-    border-radius:0;
+    width: 100%;
+    border-radius: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -255,7 +260,7 @@ ul {
 
 #DropDownMenu2 span {
     z-index: 5;
-    color:white !important;
+    color: white !important;
 }
 
 dropdown-item {
@@ -316,4 +321,14 @@ video {
     display: flex;
     justify-content: space-around;
     margin-bottom: 3em;
+}
+
+.testbox {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.2);
+    left: 99%;
+    top: 34%;
+    border-radius: 100%;
 }
