Go with the flow

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,12 +12,12 @@
 
 {{!< default}}
 <main class="container">
-    <h1 class="title">The last collaboration tool you will ever use</h1>
+    <h1 class="title">Go with the flow</h1>
     <video id="basicVideo" controls autoplay muted loop>
         <source src="./public/img/basic.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <h2 class="title">Try our easy to use tool</h2>
+    <h2 class="title">The last collaboration tool you will ever use</h2>
 
     <div class="information">
         <img src="./public/img/message.bmp" alt="Message" class="display">
